hphp/hack/test/typecheck/class_as_enum_constant.php.exp
File "class_as_enum_constant.php", line 14, characters 3-16:
Enum element cannot be named 'class' (Parsing[1002])
